# civic-libre

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  PROMPT.md  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/apps/announcements/: admin.py  apps.py  feeds.py  forms.py  models.py  urls.py  views.py
backend/apps/announcements/migrations/: 0001_initial.py  0002_groupe_gestionnaire.py
backend/apps/announcements/templates/announcements/: detail.html  manage_base.html  manage_confirm_delete.html  manage_form.html  manage_list.html
backend/apps/events/: apps.py  feeds.py  gancio.py  ics.py  models.py  sync.py  urls.py  views.py
backend/apps/events/migrations/: 0001_initial.py
backend/apps/events/templates/events/: _date_tile.html  detail.html  list.html
backend/apps/push/: api.py  apps.py  models.py  sender.py  urls.py  vapid.py  views.py
backend/apps/push/migrations/: 0001_initial.py
backend/apps/push/templates/push/: settings.html
backend/apps/reports/: admin.py  anonymize.py  apps.py  forms.py  geocoding.py  images.py  manage_views.py  models.py  notifications.py  open311.py  open311_urls.py  services.py  throttle.py  urls.py  views.py
backend/apps/reports/migrations/: 0001_initial.py  0002_categories_par_defaut.py  0003_reportupdate.py  0004_groupes_agents.py
backend/apps/reports/templates/reports/: form.html  manage_detail.html  manage_list.html  tracking.html
backend/apps/ui/: apps.py  context_processors.py  health.py  maintenance.py  pwa.py  tasks.py  theme.py  tiles.py  urls.py  views.py
backend/apps/ui/management/commands/: ensure_vapid.py  run_worker.py  seed_demo.py
backend/civic/: settings.py  urls.py  wsgi.py
backend/tests/: conftest.py  fixtures_gancio.py  test_announcements.py  test_compose.py  test_events.py  test_exploitation.py  test_manage_reports.py  test_open311.py  test_push.py  test_reports.py  test_settings.py  test_theme.py  test_ui.py  test_vapid.py  test_worker.py
backend/tests/a11y/: test_axe.py
docs/: architecture.md  (+3 more)
(+37 files in other folders)
